2002-12-20  Pavel Roskin  <proski@gnu.org>

	* layout.c (init_curses) [!HAVE_SLANG]: Set ESCDELAY to 200ms.
	If ESCDELAY is 0, ncurses 5.2 may stop recognizing escape
	sequences under heavy CPU load.

2002-12-19  Pavel Roskin  <proski@gnu.org>

	* screen.c (chdir_other_panel): Use do_panel_cd() on the
	opposite panel instead of changing the current panel twice.

	* main.c (make_panels_dirty): Preserve the cursor position.

2002-12-18  Tomas Styblo  <tripie@cpan.org>

	* hotlist.c (update_path_name): Update the title even when
	opening an empty group.

2002-12-16  Pavel Roskin  <proski@gnu.org>

	* dir.c (do_load_dir): Add an error message if mc_opendir()
	fails.
	(do_reload_dir): Likewise.
	* screen.c (do_enter_on_file_entry): Add an error message if
	do_cd() fails.

2002-12-15  Pavel Roskin  <proski@gnu.org>

	* view.c (do_view_init): Use non-blocking open() followed by
	fstat() to avoid race conditions.  Unset O_NONBLOCK flag after
	the open().

	* cmd.c (mkdir_cmd): Don't try to create a directory with empty
	name.

	* global.h: Add replacement for O_NONBLOCK.

2002-12-11  Pavel Roskin  <proski@gnu.org>

	* find.c (find_file): Skip entries without data when panelizing.
	Found by Valgrind.

	* eregex.h: Undefine __restrict_arr before redefining to avoid a
	warning if it's defined.

2002-12-09  Pavel Roskin  <proski@gnu.org>

	* util.c (load_file_position): Don't free filename.

2002-12-08  Pavel Roskin  <proski@gnu.org>

	* util.c: Add functions for saving and loading file positions.

2002-12-07  Pavel Roskin  <proski@gnu.org>

	* file.c (is_wildcarded): Move ...
	* filegui.c: ... here.  Make static.

2002-12-01  Pavel Roskin  <proski@gnu.org>

	* cmd.c (do_edit_at_line): Set line to 0 to allow the editor to
	decide if the user cares about the initial line or not.
	* main.c: Set edit_one_file_start_line to 0 initially.

2002-11-29  Pavel Roskin  <proski@gnu.org>

	* setup.c: Add option_save_position to the options table.
